supertask functionality added close #5 #6
